--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Práctica M2_T5. Juan Muñoz</title>
+<title>M2_T5</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>MÁSCARA DE MOMIA</h1>
+<h1>Mummy Mask</h1>
 <p>
-    Práctica de digitalización del patrimonio. Mayo 2025.
+    JMM_Mayo_2025
 </p>
 <x3d width='800px' height='800px'>
 <scene>
